# carpool-coordinator

./: .gitignore  AGENTS.md  ARCHITECTURE.md  KNOWLEDGE.md  LOG.md  README.md  pyproject.toml
.kilo/plans/: 1782326611319-backend-scaffold-health-endpoint.md
app/: main.py
app/api/: health.py
app/models/: error.py  health.py
app/repositories/: __init__.py  audit.py  base.py  match.py  registration.py  session.py  user.py
docs/: api_contracts.md  data_model_erd.md  database_design.md  functional_requirements_and_architecture.md  rbac_matrix.md  requirements_baseline.md
docs/adr/: 0000-template.md  0001-table-naming-by-data-model.md  0002-app-session-jwt.md  0003-terraform-iac-us-east-2.md  0004-same-origin-rewrites.md  0005-middleware-ordering.md  0006-jwks-caching.md  0007-dynamodb-on-demand.md  0008-deferred-notification-delivery.md  0009-contract-first-error-envelope.md  0009-unauthorized-subscriber-pattern.md
docs/diagrams/: 01-auth-registration-flow.mmd  02-session-lifecycle.mmd  03-matching-approval-workflow.mmd  04-notification-fan-out.mmd
docs/ideas/: carpool-mvp-scope.md
docs/wireframes/: 01-login-session-code.md  02-session-dashboard.md  03-driver-registration.md  (+4 more)
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  wrangler.toml
infra/: main.tf  outputs.tf  terraform.tf  variables.tf
plans/: phase-1-discovery.md  phase-2-foundation.md  phase-3-registration.md  phase-4-matching-engine.md  phase-5-approval-notification.md  phase-6-hardening.md
tests/: conftest.py  test_health.py  test_models.py
(+14 files in other folders)
