[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carpool-coordinator-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "mangum",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["src/", "test/", "mock/"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["src/", "test/", "mock/"]
